Fix header size/spacing and tip view styling

--- a/app/App.scss
+++ b/app/App.scss
@@ -177,28 +177,27 @@ body > div {
 
 .tip_container {
   display: flex;
+  justify-content: flex-start;
   flex-direction: column;
   height: 100%;
   width: 85%;
-  padding: 5% 0 5% 10%;
+  padding: 0% 0 0% 10%;
   color: white;
 }
 .tip_header {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  /*height: 20%;*/
+  text-align: center;
   width: 100%;
   color: white;
   font-size: 2.8em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
   box-sizing: border-box;
-  margin-bottom: 3%;
 }
 .tip_subheader {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /*height: 20%;*/
   width: 100%;
   color: white;
   font-size: 1.9em;
@@ -209,29 +208,28 @@ body > div {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
-  height: 80%;
+  height: 65%;
   width: 100%;
 }
+.tip_img_container {
+  display: flex;
+  height: 100%;
+  flex: 75;
+}
+//all images are 1500x1000
 .tip_img {
-  @media (max-width: $small) {
-    width: 55%
-  }
-  @media (min-width: $large) {
-    width: 68%;
-  }
+  height: 100%;
 }
 .tip_textbox_and_buttons {
-  width: auto;
-  height: 100%;
-  margin-left: 5%;
-  margin-right: 5%;
   display: flex;
+  flex: 35;
+  height: 100%;
+  padding: 0 5%;
   flex-direction: column;
   justify-content: space-between;
 }
 .tip_textbox {
-  height: 80%;
+  flex: 8;
   overflow-y: scroll;
   color: white;
   @media (max-width: $small) {
@@ -244,21 +242,21 @@ body > div {
   }
 }
 .tip_buttons_container {
-  height: 12%;
+  flex: 2;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: flex-end;
 }
 .tip_button {
   width: 40%;
-  height: 100%;
+  height: 3em;
   color: grey;
   text-align: center;
   background-color: white;
   box-sizing: border-box;
   border: .2em grey solid;
 }
-
 .tip_button:hover {
   background-color: lightgray;
 }
